Fix donation widget and align download buttons (#40)

--- a/src/styles/templates/donation_widget.scss
+++ b/src/styles/templates/donation_widget.scss
@@ -99,7 +99,7 @@ $con-color: #e99;
 	color: $pro-color;
 	margin-bottom: 4px;
 	font-size: 0.55rem;
-	line-height: 1.15;
+	line-height: 1.15 !important;
 
 	&::before {
 		content: "+";
@@ -113,7 +113,7 @@ $con-color: #e99;
 	color: $con-color;
 	margin-bottom: 4px;
 	font-size: 0.55rem;
-	line-height: 1.15;
+	line-height: 1.15 !important;
 
 	&::before {
 		content: "–";
